--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html {
+  font-size: 16px;
+}
+
+body {
+  font-size: 1rem;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -8,11 +16,219 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+*, :before, :after {
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  line-height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.root-container {
-  padding: 20px;
+ /*Global classes */
+
+.d-block {
+  display: block;
+}
+
+.d-inline-block {
+  display: inline-block;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+
+.flex-column-reverse {
+  flex-direction: column-reverse;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse;
+}
+
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.flex-grow-1 {
+  flex-shrink: 1;
+}
+
+.justify-content-start {
+  justify-content: flex-start;
+}
+
+.justify-content-end {
+  justify-content: flex-end;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.justify-content-around {
+  justify-content: space-around;
+}
+
+.flex-items-end {
+  align-items: flex-end;
+}
+
+.align-items-start {
+  align-items: flex-start;
+}
+
+.align-items-end {
+  align-items: flex-end;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.align-items-baseline {
+  align-items: baseline;
+}
+
+.align-items-stretch {
+  align-items: stretch;
+}
+
+.align-content-start {
+  align-content: flex-start;
+}
+
+.align-content-end {
+  align-content: flex-end;
+}
+
+.align-content-center {
+  align-content: center;
+}
+
+.align-content-between {
+  align-content: space-between;
+}
+
+.align-content-around {
+  align-content: space-around;
+}
+
+.align-content-stretch {
+  align-content: stretch;
+}
+
+.text-decoration-none {
+  text-decoration: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+/* Global users classes */
+
+.absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.btn-default {
+  margin: 0;
+  padding: 0;
+  border: 0 solid #fff;
+  background-color: #fff;
+}
+
+.clr-main {
+  color: #616161;
+}
+
+.clr-default {
+  color: #313131;
+}
+
+.clr-add {
+  color: #272727;
+}
+
+.clr-one {
+  color: #fc5f45
+}
+
+.clr-two {
+  color: #feb960
+}
+
+.clr-three {
+  color: #38c695;
+}
+
+.clr-four {
+  color: #b27cf5;
+}
+
+.clr-wht {
+  color: #fff;
+}
+
+.clr-bg-main {
+  background-color: #f7f7f7;
+}
+
+.clr-bg-add {
+  background-color: rgba(38, 39, 50, 0.85);;
+}
+
+.clr-bg-wht {
+  background-color: #fff;
 }
